// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card friendsName should match the snapshot when a friends name is provided 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    favorite={Object {}}
    friendName="coda"
    type="friends"
    updateFavorites={[Function]}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <article
        className="Card friends"
>
        <div
                className="game-info"
                id="game-title"
        >
                <h3>
                        coda played:
                </h3>
                <h3 />
                <img
                        alt="game-icon"
                        src={undefined}
                />
                <p
                        id="owned-p"
                >
                        played 
                        <i
                                class="far fa-play-circle"
                        />
                </p>
                <div
                        alt="edit a game in your collection"
                        id="edit"
                        onClick={[Function]}
                />
                <div
                        alt="edit a game in your collection"
                        id="add"
                        onClick={[Function]}
                />
        </div>
        <div
                className="game-info"
                id="game-description"
        >
                <p />
        </div>
        <div
                className="game-info"
                id="review-cont"
        >
                <h3>
                        <span />
                        /5
                </h3>
                <p />
        </div>
</article>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="game-info"
            id="game-title"
>
            <h3>
                        coda played:
            </h3>
            <h3 />
            <img
                        alt="game-icon"
                        src={undefined}
            />
            <p
                        id="owned-p"
            >
                        played 
                        <i
                                    class="far fa-play-circle"
                        />
            </p>
            <div
                        alt="edit a game in your collection"
                        id="edit"
                        onClick={[Function]}
            />
            <div
                        alt="edit a game in your collection"
                        id="add"
                        onClick={[Function]}
            />
</div>,
          <div
            className="game-info"
            id="game-description"
>
            <p />
</div>,
          <div
            className="game-info"
            id="review-cont"
>
            <h3>
                        <span />
                        /5
            </h3>
            <p />
</div>,
        ],
        "className": "Card friends",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3>
                coda played:
</h3>,
              <h3 />,
              <img
                alt="game-icon"
                src={undefined}
/>,
              <p
                id="owned-p"
>
                played 
                <i
                                class="far fa-play-circle"
                />
</p>,
              <div
                alt="edit a game in your collection"
                id="edit"
                onClick={[Function]}
/>,
              <div
                alt="edit a game in your collection"
                id="add"
                onClick={[Function]}
/>,
            ],
            "className": "game-info",
            "id": "game-title",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "coda played:",
              },
              "ref": null,
              "rendered": "coda played:",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "game-icon",
                "src": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "played ",
                  <i
                    class="far fa-play-circle"
/>,
                ],
                "id": "owned-p",
              },
              "ref": null,
              "rendered": Array [
                "played ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "class": "far fa-play-circle",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
              ],
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "edit a game in your collection",
                "id": "edit",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "edit a game in your collection",
                "id": "add",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <p />,
            "className": "game-info",
            "id": "game-description",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "p",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3>
                <span />
                /5
</h3>,
              <p />,
            ],
            "className": "game-info",
            "id": "review-cont",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span />,
                  "/5",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                "/5",
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "article",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <article
          className="Card friends"
>
          <div
                    className="game-info"
                    id="game-title"
          >
                    <h3>
                              coda played:
                    </h3>
                    <h3 />
                    <img
                              alt="game-icon"
                              src={undefined}
                    />
                    <p
                              id="owned-p"
                    >
                              played 
                              <i
                                        class="far fa-play-circle"
                              />
                    </p>
                    <div
                              alt="edit a game in your collection"
                              id="edit"
                              onClick={[Function]}
                    />
                    <div
                              alt="edit a game in your collection"
                              id="add"
                              onClick={[Function]}
                    />
          </div>
          <div
                    className="game-info"
                    id="game-description"
          >
                    <p />
          </div>
          <div
                    className="game-info"
                    id="review-cont"
          >
                    <h3>
                              <span />
                              /5
                    </h3>
                    <p />
          </div>
</article>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="game-info"
              id="game-title"
>
              <h3>
                            coda played:
              </h3>
              <h3 />
              <img
                            alt="game-icon"
                            src={undefined}
              />
              <p
                            id="owned-p"
              >
                            played 
                            <i
                                          class="far fa-play-circle"
                            />
              </p>
              <div
                            alt="edit a game in your collection"
                            id="edit"
                            onClick={[Function]}
              />
              <div
                            alt="edit a game in your collection"
                            id="add"
                            onClick={[Function]}
              />
</div>,
            <div
              className="game-info"
              id="game-description"
>
              <p />
</div>,
            <div
              className="game-info"
              id="review-cont"
>
              <h3>
                            <span />
                            /5
              </h3>
              <p />
</div>,
          ],
          "className": "Card friends",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h3>
                  coda played:
</h3>,
                <h3 />,
                <img
                  alt="game-icon"
                  src={undefined}
/>,
                <p
                  id="owned-p"
>
                  played 
                  <i
                                    class="far fa-play-circle"
                  />
</p>,
                <div
                  alt="edit a game in your collection"
                  id="edit"
                  onClick={[Function]}
/>,
                <div
                  alt="edit a game in your collection"
                  id="add"
                  onClick={[Function]}
/>,
              ],
              "className": "game-info",
              "id": "game-title",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "coda played:",
                },
                "ref": null,
                "rendered": "coda played:",
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "game-icon",
                  "src": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "played ",
                    <i
                      class="far fa-play-circle"
/>,
                  ],
                  "id": "owned-p",
                },
                "ref": null,
                "rendered": Array [
                  "played ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "class": "far fa-play-circle",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                ],
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "edit a game in your collection",
                  "id": "edit",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "edit a game in your collection",
                  "id": "add",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <p />,
              "className": "game-info",
              "id": "game-description",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h3>
                  <span />
                  /5
</h3>,
                <p />,
              ],
              "className": "game-info",
              "id": "review-cont",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span />,
                    "/5",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                  "/5",
                ],
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "p",
              },
            ],
            "type": "div",
          },
        ],
        "type": "article",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    favorite={Object {}}
    friendName="friend"
    type="games"
    updateFavorites={[Function]}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <article
        className="Card games"
>
        <div
                className="game-info"
                id="game-title"
        >
                <h3 />
                <h3 />
                <img
                        alt="game-icon"
                        src={undefined}
                />
                <p
                        id="owned-p"
                >
                        played 
                        <i
                                class="far fa-play-circle"
                        />
                </p>
                <div
                        alt="edit a game in your collection"
                        id="edit"
                        onClick={[Function]}
                />
                <div
                        alt="edit a game in your collection"
                        id="add"
                        onClick={[Function]}
                />
        </div>
        <div
                className="game-info"
                id="game-description"
        >
                <p />
        </div>
        <div
                className="game-info"
                id="review-cont"
        >
                <h3>
                        <span />
                        /5
                </h3>
                <p />
        </div>
</article>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="game-info"
            id="game-title"
>
            <h3 />
            <h3 />
            <img
                        alt="game-icon"
                        src={undefined}
            />
            <p
                        id="owned-p"
            >
                        played 
                        <i
                                    class="far fa-play-circle"
                        />
            </p>
            <div
                        alt="edit a game in your collection"
                        id="edit"
                        onClick={[Function]}
            />
            <div
                        alt="edit a game in your collection"
                        id="add"
                        onClick={[Function]}
            />
</div>,
          <div
            className="game-info"
            id="game-description"
>
            <p />
</div>,
          <div
            className="game-info"
            id="review-cont"
>
            <h3>
                        <span />
                        /5
            </h3>
            <p />
</div>,
        ],
        "className": "Card games",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3 />,
              <h3 />,
              <img
                alt="game-icon"
                src={undefined}
/>,
              <p
                id="owned-p"
>
                played 
                <i
                                class="far fa-play-circle"
                />
</p>,
              <div
                alt="edit a game in your collection"
                id="edit"
                onClick={[Function]}
/>,
              <div
                alt="edit a game in your collection"
                id="add"
                onClick={[Function]}
/>,
            ],
            "className": "game-info",
            "id": "game-title",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": null,
              },
              "ref": null,
              "rendered": null,
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "game-icon",
                "src": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "played ",
                  <i
                    class="far fa-play-circle"
/>,
                ],
                "id": "owned-p",
              },
              "ref": null,
              "rendered": Array [
                "played ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "class": "far fa-play-circle",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
              ],
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "edit a game in your collection",
                "id": "edit",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "edit a game in your collection",
                "id": "add",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <p />,
            "className": "game-info",
            "id": "game-description",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "p",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3>
                <span />
                /5
</h3>,
              <p />,
            ],
            "className": "game-info",
            "id": "review-cont",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span />,
                  "/5",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                "/5",
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "article",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <article
          className="Card games"
>
          <div
                    className="game-info"
                    id="game-title"
          >
                    <h3 />
                    <h3 />
                    <img
                              alt="game-icon"
                              src={undefined}
                    />
                    <p
                              id="owned-p"
                    >
                              played 
                              <i
                                        class="far fa-play-circle"
                              />
                    </p>
                    <div
                              alt="edit a game in your collection"
                              id="edit"
                              onClick={[Function]}
                    />
                    <div
                              alt="edit a game in your collection"
                              id="add"
                              onClick={[Function]}
                    />
          </div>
          <div
                    className="game-info"
                    id="game-description"
          >
                    <p />
          </div>
          <div
                    className="game-info"
                    id="review-cont"
          >
                    <h3>
                              <span />
                              /5
                    </h3>
                    <p />
          </div>
</article>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="game-info"
              id="game-title"
>
              <h3 />
              <h3 />
              <img
                            alt="game-icon"
                            src={undefined}
              />
              <p
                            id="owned-p"
              >
                            played 
                            <i
                                          class="far fa-play-circle"
                            />
              </p>
              <div
                            alt="edit a game in your collection"
                            id="edit"
                            onClick={[Function]}
              />
              <div
                            alt="edit a game in your collection"
                            id="add"
                            onClick={[Function]}
              />
</div>,
            <div
              className="game-info"
              id="game-description"
>
              <p />
</div>,
            <div
              className="game-info"
              id="review-cont"
>
              <h3>
                            <span />
                            /5
              </h3>
              <p />
</div>,
          ],
          "className": "Card games",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h3 />,
                <h3 />,
                <img
                  alt="game-icon"
                  src={undefined}
/>,
                <p
                  id="owned-p"
>
                  played 
                  <i
                                    class="far fa-play-circle"
                  />
</p>,
                <div
                  alt="edit a game in your collection"
                  id="edit"
                  onClick={[Function]}
/>,
                <div
                  alt="edit a game in your collection"
                  id="add"
                  onClick={[Function]}
/>,
              ],
              "className": "game-info",
              "id": "game-title",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": null,
                },
                "ref": null,
                "rendered": null,
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "game-icon",
                  "src": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "played ",
                    <i
                      class="far fa-play-circle"
/>,
                  ],
                  "id": "owned-p",
                },
                "ref": null,
                "rendered": Array [
                  "played ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "class": "far fa-play-circle",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                ],
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "edit a game in your collection",
                  "id": "edit",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "edit a game in your collection",
                  "id": "add",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <p />,
              "className": "game-info",
              "id": "game-description",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h3>
                  <span />
                  /5
</h3>,
                <p />,
              ],
              "className": "game-info",
              "id": "review-cont",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span />,
                    "/5",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                  "/5",
                ],
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "p",
              },
            ],
            "type": "div",
          },
        ],
        "type": "article",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
